// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the MainHeader component and supplyNOM, currentETHPrice are not of BigNumber type when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  <header>
    <div
      class="sc-bdnxRM lgwsBc"
    >
      <header
        class="sc-pNWdM ieGsuO"
      >
        <div
          class="sc-jrsJWt lhcGWh"
        >
          <img
            alt="Onomy"
            class="sc-kEqXSa hLUCxM"
            src="logo.svg"
          />
          <div
            class="sc-iqAclL hTlWyJ"
          >
            <strong>
              Onomy
            </strong>
            <span>
              Bonding curve
            </span>
          </div>
        </div>
        <div
          id="tour-prices"
        >
          <div
            class="sc-crzoAE bKzEsk"
          >
            <div
              class="sc-bqGGPW lkvOZP"
            >
              <div
                class="sc-dIsUp kuZsBn"
              >
                <strong>
                  NOM / USDT
                </strong>
                <div
                  class="sc-hBMUJo etPjog"
                >
                  <strong>
                    $10.12
                  </strong>
                  <span
                    class="sc-fnVZcZ fQFASN"
                    type="increase"
                  >
                    24.2%
                  </span>
                </div>
              </div>
              <div
                class="sc-dIsUp kuZsBn"
              >
                <strong>
                  NOM / ETH
                </strong>
                <div
                  class="sc-hBMUJo etPjog"
                >
                  <strong>
                    <span>
                      Loading
                    </span>
                  </strong>
                </div>
              </div>
            </div>
            <div
              class="sc-ksluID eIzNUR"
            >
              <div
                class="sc-dIsUp kuZsBn"
              >
                <strong>
                  NOM Issued
                </strong>
                <div
                  class="sc-hBMUJo etPjog"
                >
                  <strong>
                    <span>
                      Loading
                    </span>
                  </strong>
                  <span
                    class="sc-fnVZcZ gYUvRI"
                  >
                    / 1E8
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </header>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Given the MainHeader component and supplyNOM, currentETHPrice are of BigNumber type when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  <header>
    <div
      class="sc-bdnxRM lgwsBc"
    >
      <header
        class="sc-pNWdM ieGsuO"
      >
        <div
          class="sc-jrsJWt lhcGWh"
        >
          <img
            alt="Onomy"
            class="sc-kEqXSa hLUCxM"
            src="logo.svg"
          />
          <div
            class="sc-iqAclL hTlWyJ"
          >
            <strong>
              Onomy
            </strong>
            <span>
              Bonding curve
            </span>
          </div>
        </div>
        <div
          id="tour-prices"
        >
          <div
            class="sc-crzoAE bKzEsk"
          >
            <div
              class="sc-bqGGPW lkvOZP"
            >
              <div
                class="sc-dIsUp kuZsBn"
              >
                <strong>
                  NOM / USDT
                </strong>
                <div
                  class="sc-hBMUJo etPjog"
                >
                  <strong>
                    $10.12
                  </strong>
                  <span
                    class="sc-fnVZcZ fQFASN"
                    type="increase"
                  >
                    24.2%
                  </span>
                </div>
              </div>
              <div
                class="sc-dIsUp kuZsBn"
              >
                <strong>
                  NOM / ETH
                </strong>
                <div
                  class="sc-hBMUJo etPjog"
                >
                  <strong>
                    <span>
                      0
                    </span>
                  </strong>
                </div>
              </div>
            </div>
            <div
              class="sc-ksluID eIzNUR"
            >
              <div
                class="sc-dIsUp kuZsBn"
              >
                <strong>
                  NOM Issued
                </strong>
                <div
                  class="sc-hBMUJo etPjog"
                >
                  <strong>
                    <span>
                      0
                    </span>
                  </strong>
                  <span
                    class="sc-fnVZcZ gYUvRI"
                  >
                    / 1E8
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </header>
    </div>
  </header>
</DocumentFragment>
`;
